// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`request plugin plugin should contain correct reducer 1`] = `
Object {
  "byKey": Object {
    "key1": Object {
      "id": "id1",
      "isPolling": false,
      "lastUpdated": undefined,
      "queryCount": 1,
    },
  },
}
`;

exports[`request plugin reducer should handle cancel after request 1`] = `
Object {
  "key1": Object {
    "id": "id1",
    "isPolling": false,
    "lastUpdated": undefined,
    "queryCount": 1,
  },
}
`;

exports[`request plugin reducer should handle fail after request 1`] = `
Object {
  "key1": Object {
    "id": "id1",
    "isPolling": false,
    "lastUpdated": undefined,
    "queryCount": 1,
  },
}
`;

exports[`request plugin reducer should handle request action 1`] = `
Object {
  "key1": Object {
    "id": "id1",
    "isPolling": false,
    "lastUpdated": undefined,
    "queryCount": 1,
  },
}
`;

exports[`request plugin reducer should handle success after request 1`] = `
Object {
  "key1": Object {
    "id": "id1",
    "isPolling": false,
    "lastUpdated": 1497328880000,
    "queryCount": 1,
  },
}
`;

exports[`request plugin reducer should not reset error after new request 1`] = `
Object {
  "key1": Object {
    "id": "id1",
    "isPolling": false,
    "lastUpdated": undefined,
    "queryCount": 2,
  },
}
`;

exports[`request plugin reducer should reset error after new request and success 1`] = `
Object {
  "key1": Object {
    "id": "id1",
    "isPolling": false,
    "lastUpdated": 1497328880000,
    "queryCount": 2,
  },
}
`;
